# moonsbox

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTES  NOTES.md  README.md  brush.js  index.html  main.js  materialpalette.js  materialpalettestyle.css  pyinst_launcher.py  pyinst_moonsbox.spec  renderer.js  requirements.txt  soundsystem.js  webmoonsbox.js  webmoonsbox.wasm
.github/workflows/: build-cmake.yml  build-pyinstaller.yml
assets/: materials_palette_btn_icon  saving_btn_icon  window_icon
assets/materials/: +100 K  -100 K  Absorbent  Aerogel  Black Hole  Dry Ice  Dynamite  Fire  Glass  Ice  Inert Liquid  Langton's Ant  Lava  Propane  Sand  Space  Steam  Tap  Unbreakable Wall  Water
assets/sounds/: convert_Sand_to_glass
libopt/: CMakeLists.txt  camera.hpp  drawing.cpp  drawing.hpp  fpscounter.cpp  fpscounter.hpp  gameapp.cpp  gameapp.hpp  gamemap.cpp  gamemap.hpp  main.cpp  mainwindowui.cpp  mainwindowui.hpp  materialcontroller.hpp  materialdefs.hpp  materialpalette.cpp  materialpalette.hpp  materialregistry.cpp  materialregistry.hpp  materials.hpp  minizipsavecontainer.cpp  minizipsavecontainer.hpp  module.cpp  renderer.cpp  renderer.hpp  savecontainer.hpp  saving.cpp  saving.hpp  simulation.cpp  simulation.hpp  test.cpp  windowevents.cpp  windowevents.hpp
moonsbox/: CMakeLists.txt  gameapp.cpp  gameapp.hpp  main.cpp  mainwindowui.hpp  materialpalette.cpp  materialpalette.hpp  renderer.cpp  renderer.hpp  soundsystem.cpp  soundsystem.hpp  windowevents.cpp  windowevents.hpp
simulationengine/: CMakeLists.txt
simulationengine/algorithms/: cksum.cpp  cksum.hpp  drawing.cpp  drawing.hpp  fastprng.cpp  fastprng.hpp
simulationengine/core/: compat.hpp  gamemap.cpp  gamemap.hpp  materialcontroller.hpp  materialdefs.hpp  materialregistry.cpp
simulationengine/materials/: absorbent.hpp  aerogel.hpp  allmaterials.hpp  blackhole.hpp  common.hpp  dryice.hpp  dynamite.hpp  fire.hpp  ice.hpp  langtonant.hpp  lava.hpp  materials.hpp  minus100k.hpp  plus100k.hpp  propane.hpp  pureglass.hpp  sand.hpp  space.hpp  steam.hpp  tap.hpp  unbreakablewall.hpp  water.hpp
simulationengine/python/: pybind11module.cpp
simulationengine/serialization/: minizipsavecontainer.cpp  minizipsavecontainer.hpp  saving.cpp  saving.hpp
simulationengine/simulation/: simulationmanager.cpp  simulationmanager.hpp
src/: CMakeLists.txt  __init__.py  __main__.py  camera.cpp  const.py  drawing.cpp  drawing.hpp  fastprng.cpp  fastprng.hpp  fpscounter.hpp  gameapp.cpp  gameapp.hpp  gameapp.py  gamemap.cpp  gamemap.hpp  gamemap.py  main.cpp  mainwindowui.cpp  mainwindowui.hpp  materialcontroller.hpp  materialdefs.hpp  materialpalette.cpp  materialpalette.hpp  materialpalette.py  materialregistry.cpp  materialregistry.hpp  materials.hpp  materials.py  minizipsavecontainer.hpp  renderer.cpp  renderer.hpp  renderer.py  savecontainer.hpp  saving.cpp  saving.hpp  simulation.cpp  simulation.py  soundengine.py  soundsystem.cpp  soundsystem.hpp  (+5 more)
src/config/: __init__.py  _defaults.py
src/nativedialog/: __init__.py  _tk.py  _windows.py
src/opt/: CMakeLists.txt  gamemap.cpp  gamemap.cppm  gamemap.hpp  materialcontroller.hpp  materialdefs.hpp  modapi.h  public.cpp  pyexport.cpp  simulation.cpp  simulation.cppm  util.cppm
src/opt/core/: CMakeLists.txt  drawing.cpp  drawing.hpp  gamemap.cpp  gamemap.cppm  gamemap.hpp  materialregistry.cppm  modloader.cppm  simulation.cppm  util.cppm  util.hpp
src/opt/game/: CMakeLists.txt  pythonapi.cpp
src/opt/include/: modapi.h
src/opt/modapi/: CMakeLists.txt  modapi.cpp
src/opt/pythonapi/: CMakeLists.txt
tests/: subwindow.py
user/: config.toml
webmoonsbox/: CMakeLists.txt  brush.js  index.html  main.js  materialpalette.js  materialpalettestyle.css  renderer.js  soundsystem.js  webmoonsbox.cpp
